update and typos corrections

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -46,7 +46,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\caioa\\mambaforge\\envs\\tathu-dev\\lib\\site-packages\\osgeo\\osr.py:385: FutureWarning: Neither osr.UseExceptions() nor osr.DontUseExceptions() has been explicitly called. In GDAL 4.0, exceptions will be enabled by default.\n",
+      "C:\\Users\\caioa\\mambaforge\\envs\\fast-env\\lib\\site-packages\\osgeo\\osr.py:410: FutureWarning: Neither osr.UseExceptions() nor osr.DontUseExceptions() has been explicitly called. In GDAL 4.0, exceptions will be enabled by default.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -55,7 +55,7 @@
     "#| export\n",
     "from pathlib import Path\n",
     "import pandas as pd\n",
-    "import geopandas as gdp\n",
+    "import geopandas as gpd\n",
     "import sqlite3\n",
     "import datetime\n",
     "import numpy as np\n",
