--- a/01_dataset.ipynb
+++ b/01_dataset.ipynb
@@ -25,6 +25,13 @@
    "outputs": [],
    "source": [
     "#| export\n",
+    "from pathlib import Path\n",
+    "import geopandas as gpd\n",
+    "import sqlite3\n",
+    "import datetime\n",
+    "import numpy as np\n",
+    "import gc\n",
+    "\n",
     "import exp4\n",
     "from exp4.core import *\n",
     "#from exp4.core import load_relato"
@@ -69,7 +76,7 @@
    "outputs": [],
    "source": [
     "#| hide\n",
-    "db_name"
+    "#db_name"
    ]
   },
   {
