--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -41,16 +51,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\caioa\\mambaforge\\envs\\fast-env\\lib\\site-packages\\osgeo\\osr.py:410: FutureWarning: Neither osr.UseExceptions() nor osr.DontUseExceptions() has been explicitly called. In GDAL 4.0, exceptions will be enabled by default.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| export\n",
     "from pathlib import Path\n",
@@ -168,6 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "def connect_db(dbname):\n",
     "        \n",
     "    \"\"\"\n",
@@ -187,6 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "def load_db(dbname, sql, params, geo_col):\n",
     "\n",
     "    \"\"\"\n",
@@ -204,6 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "def query2gdf(conn, sql, params, geo_col):\n",
     "\n",
     "    \"\"\"\n",
