Database creation functions

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -74,7 +74,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def geo2buffer(row, buffer=20):\n",
+    "def geo2buffer(row, buffer=10):\n",
     "        \n",
     "    \"\"\"\n",
     "    Adds an approximate buffer of inclusion around the point geometry of a GeoDataFrame row.\n",
@@ -215,6 +215,13 @@
     "    \"\"\"\n",
     "    \n",
     "    return gpd.GeoDataFrame.from_postgis(sql, conn, params=params, geom_col=geo_col)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Functions for managing tables at the SpatiaLITE database"
    ]
   },
   {
